--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"noUnusedParameters": true,
 		"noUnusedLocals": true,
 		"noImplicitAny": true,
-		"target": "ES2020",
+		"target": "ESNext",
 		"lib": [
 			"dom",
 			"es2017"
