--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@valeera/x",
-	"version": "0.1.15",
+	"version": "0.1.15-b",
 	"description": "ECS framework written in TS for web application.",
 	"main": "build/x.js",
 	"repository": "ValeeraJS/x",
@@ -40,7 +40,7 @@
 	"author": "hypnosnova",
 	"license": "MIT",
 	"dependencies": {
-		"@valeera/eventdispatcher": "^2.2.0",
+		"@valeera/eventdispatcher": "^2.2.2",
 		"@valeera/tree": "^0.1.4",
 		"@valeera/idgenerator": "^1.0.0",
 		"clone-deep": "^4.0.1"
@@ -57,7 +57,7 @@
 		"eslint-plugin-html": "^6.0.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"esm": "^3.2.25",
-		"google-closure-compiler": "^20220202.0.0",
+		"google-closure-compiler": "^20220301.0.0",
 		"http-server": "^0.12.3",
 		"mocha": "^9.1.1",
 		"nyc": "^15.1.0",
