--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@valeera/x",
-	"version": "0.1.16",
+	"version": "0.1.16-b",
 	"description": "ECS framework written in TS for web application.",
 	"main": "build/x.js",
 	"repository": "ValeeraJS/x",
@@ -41,7 +41,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@valeera/eventdispatcher": "2.2.4",
-		"@valeera/tree": "0.1.5",
+		"@valeera/tree": "0.1.5-b",
 		"@valeera/idgenerator": "1.1.0",
 		"clone-deep": "^4.0.1"
 	},
@@ -57,7 +57,7 @@
 		"eslint-plugin-html": "^6.0.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"esm": "^3.2.25",
-		"google-closure-compiler": "^20220301.0.0",
+		"google-closure-compiler": "^20220405.0.0",
 		"http-server": "^0.12.3",
 		"mocha": "^9.1.1",
 		"nyc": "^15.1.0",
