--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@valeera/x",
-	"version": "0.1.19",
+	"version": "0.1.20",
 	"description": "ECS framework written in TS for web application.",
 	"main": "build/x.js",
 	"repository": "ValeeraJS/x",
@@ -21,9 +21,6 @@
 	},
 	"scripts": {
 		"build": "rollup -c scripts/rollup.config.js",
-		"build-legacy": "rollup -c scripts/rollup.config.legacy.js",
-		"build-closure": "google-closure-compiler --compilation_level=ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --jscomp_off=globalThis --jscomp_off=checkTypes --externs scripts/externs.js --language_in=ECMASCRIPT_NEXT --language_out=ECMASCRIPT_NEXT --js build/x.js --js_output_file build/x.min.js",
-		"build-closure-legacy": "google-closure-compiler --compilation_level=ADVANCED_OPTIMIZATIONS --warning_level=VERBOSE --jscomp_off=globalThis --jscomp_off=checkTypes --externs scripts/externs.js --language_in=ECMASCRIPT5 --language_out=ECMASCRIPT5 --js build/x.legacy.js --js_output_file build/x.legacy.min.js",
 		"build-all": "npm run build && npm run build-legacy && npm run build-closure && npm run build-closure-legacy",
 		"start": "npm run dev",
 		"lint": "eslint src --ext js --ext ts",
@@ -40,33 +37,32 @@
 	"author": "hypnosnova",
 	"license": "MIT",
 	"dependencies": {
-		"@valeera/eventdispatcher": "2.2.4",
-		"@valeera/tree": "0.1.5-b",
-		"@valeera/idgenerator": "1.1.1",
-		"clone-deep": "^4.0.1"
+		"@valeera/eventfirer": "latest",
+		"@valeera/tree": "latest",
+		"@valeera/idgenerator": "latest",
+		"clone-deep": "latest"
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.1.1",
-		"@typescript-eslint/eslint-plugin": "^5.8.0",
-		"@typescript-eslint/parser": "^5.8.0",
-		"chai": "^4.2.0",
-		"concurrently": "^6.0.0",
-		"eslint": "^8.5.0",
-		"eslint-config-valeera": "^0.1.1",
-		"eslint-plugin-html": "^6.0.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"esm": "^3.2.25",
-		"google-closure-compiler": "^20220405.0.0",
-		"http-server": "^0.12.3",
-		"mocha": "^9.1.1",
-		"nyc": "^15.1.0",
-		"prettier": "^2.5.1",
-		"rollup": "^2.62.0",
-		"rollup-plugin-json": "^4.0.0",
-		"rollup-plugin-typescript2": "^0.31.1",
-		"typescript": "^4.5.5",
-		"@types/clone-deep": "^4.0.1"
+		"@rollup/plugin-json": "latest",
+		"@rollup/plugin-node-resolve": "latest",
+		"@typescript-eslint/eslint-plugin": "latest",
+		"@typescript-eslint/parser": "latest",
+		"chai": "latest",
+		"concurrently": "latest",
+		"eslint": "latest",
+		"eslint-config-valeera": "latest",
+		"eslint-plugin-html": "latest",
+		"eslint-plugin-prettier": "latest",
+		"esm": "latest",
+		"http-server": "latest",
+		"mocha": "latest",
+		"nyc": "latest",
+		"prettier": "latest",
+		"rollup": "latest",
+		"rollup-plugin-json": "latest",
+		"rollup-plugin-typescript2": "latest",
+		"typescript": "latest",
+		"@types/clone-deep": "latest"
 	},
 	"publishConfig": {
 		"access": "public"
