--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@valeera/x",
-	"version": "0.1.24",
+	"version": "0.1.25",
 	"description": "ECS framework written in TS for web application.",
 	"main": "build/x.js",
 	"repository": "ValeeraJS/x",
@@ -21,6 +21,7 @@
 	},
 	"scripts": {
 		"build": "rollup -c scripts/rollup.config.mjs",
+		"build:umd": "rollup -c scripts/rollup.config.umd.mjs",
 		"start": "npm run dev",
 		"lint": "eslint src --ext js --ext ts",
 		"test": "nyc --reporter=html --reporter=text mocha --require esm",
@@ -36,7 +37,7 @@
 	"author": "hypnosnova",
 	"license": "MIT",
 	"dependencies": {
-		"@valeera/eventfirer": "latest",
+		"@valeera/eventfire": "1.1.0",
 		"@valeera/idgenerator": "latest",
 		"@valeera/tree": "latest",
 		"clone-deep": "latest"
