--- a/package.json
+++ b/package.json
@@ -37,31 +37,33 @@
 	"author": "hypnosnova",
 	"license": "MIT",
 	"dependencies": {
-		"@valeera/eventfire": "1.1.1",
-		"@valeera/idgenerator": "1.2.2",
-		"@valeera/tree": "0.1.8",
+		"@valeera/eventfire": "^1.1.1",
+		"@valeera/idgenerator": "^1.2.2",
+		"@valeera/tree": "0.1.9alpha-1",
 		"clone-deep": "latest"
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "latest",
-		"@rollup/plugin-node-resolve": "latest",
-		"@types/clone-deep": "latest",
-		"@typescript-eslint/eslint-plugin": "latest",
-		"@typescript-eslint/parser": "latest",
-		"chai": "latest",
-		"concurrently": "latest",
-		"eslint": "latest",
-		"eslint-config-valeera": "^0.1.3",
-		"eslint-plugin-html": "latest",
-		"eslint-plugin-prettier": "latest",
-		"esm": "latest",
-		"http-server": "latest",
-		"mocha": "latest",
-		"nyc": "latest",
-		"prettier": "latest",
-		"rollup": "latest",
-		"rollup-plugin-typescript2": "latest",
-		"typescript": "latest"
+		"@rollup/plugin-json": "^6.0.0",
+		"@rollup/plugin-node-resolve": "^15.2.1",
+		"@types/chai": "^4.3.5",
+		"@types/clone-deep": "^4.0.1",
+		"@types/mocha": "^10.0.1",
+		"@typescript-eslint/eslint-plugin": "^6.5.0",
+		"@typescript-eslint/parser": "^6.5.0",
+		"chai": "^4.3.8",
+		"concurrently": "^8.2.1",
+		"eslint": "^8.48.0",
+		"eslint-config-valeera": "^0.1.4",
+		"eslint-plugin-html": "^7.1.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"esm": "^3.2.25",
+		"http-server": "^14.1.1",
+		"mocha": "^10.2.0",
+		"nyc": "^15.1.0",
+		"prettier": "^3.0.3",
+		"rollup": "^3.28.1",
+		"rollup-plugin-typescript2": "^0.35.0",
+		"typescript": "^5.2.2"
 	},
 	"publishConfig": {
 		"access": "public"
