--- a/package.json
+++ b/package.json
@@ -43,27 +43,27 @@
 		"@valeera/tree": "0.2.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-node-resolve": "^15.2.1",
-		"@types/chai": "^4.3.5",
-		"@types/mocha": "^10.0.1",
-		"@typescript-eslint/eslint-plugin": "^6.5.0",
-		"@typescript-eslint/parser": "^6.5.0",
-		"chai": "^4.3.8",
-		"concurrently": "^8.2.1",
-		"eslint": "^8.48.0",
+		"@rollup/plugin-json": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^16.0.1",
+		"@types/chai": "^5.2.2",
+		"@types/mocha": "^10.0.10",
+		"@typescript-eslint/eslint-plugin": "^8.37.0",
+		"@typescript-eslint/parser": "^8.37.0",
+		"chai": "^5.2.1",
+		"concurrently": "^9.2.0",
+		"eslint": "^9.31.0",
 		"eslint-config-valeera": "^0.1.4",
-		"eslint-plugin-html": "^7.1.0",
-		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-html": "^8.1.3",
+		"eslint-plugin-prettier": "^5.5.1",
 		"esm": "^3.2.25",
 		"http-server": "^14.1.1",
-		"mocha": "^10.2.0",
-		"nyc": "^15.1.0",
+		"mocha": "^11.7.1",
+		"nyc": "^17.1.0",
 		"prettier": "^3.0.3",
-		"rollup": "^3.28.1",
-		"rollup-plugin-typescript2": "^0.35.0",
-		"ts-node": "latest",
-		"typescript": "^5.3.3"
+		"rollup": "^4.45.0",
+		"rollup-plugin-typescript2": "^0.36.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3"
 	},
 	"publishConfig": {
 		"access": "public"
